# JdeRobot

./: CMakeLists.txt  options.cmake
cmake/: jderobot.cmake
src/drivers/rosBitDriver/: CMakeLists.txt  rosBitDriver.in  rosBitDriver.py  rosBitDriver.yml  test_client.py
src/examples/: CMakeLists.txt
src/interfaces/: CMakeLists.txt
src/interfaces/messages/: CMakeLists.txt  package.xml
src/libs/: CMakeLists.txt
src/libs/comm_py/comm/: cameraServer.py.only-ice.in  cameraServer.py.ros.in  communicator.py.only-ice.in  communicator.py.ros.in
src/libs/comm_py/comm/ice/: cameraIceServer.py
src/libs/comm_py/comm/ros/: publisherCamera.py
src/libs/visionlib/: CMakeLists.txt
src/tools/: CMakeLists.txt
test/: CMakeLists.txt  test_config.h.in
test/data/glade/: cameraview.glade
test/resourcelocator/: CMakeLists.txt  testResourcelocator.cpp
