list_subdirectories( LIST_SAMPLES ${CMAKE_CURRENT_SOURCE_DIR} 1)
FOREACH (sample ${LIST_SAMPLES})
	if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${sample}/CMakeLists.txt)
		IF(build_${sample})
			MESSAGE(STATUS "Processing sample ${sample}")
			ADD_SUBDIRECTORY (${sample})
		ENDIF(build_${sample})
	endif(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${sample}/CMakeLists.txt)
ENDFOREACH()